B-F Backup Sandbox 30.4.12/src/objects/Promotion_Material_Item__c.object
<CustomObject>
    <description>Used by CRM.
NPA Rollout: Used to store products added to Promotions (Promotion line items).</description>
    <fields>
        <fullName>Act_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Act_Payment2__c</fullName>
        <formula>Act_Qty__c  *  Actual_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Act_Qty__c</fullName>
        <label>Act Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Payment__c</fullName>
        <label>Actual Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Rebate__c</fullName>
        <label>Actual Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Product_Custom__r.Brand__r.Name</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_From__c</fullName>
        <description>Infowelders</description>
        <label>Delivery From</label>
        <picklist>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extended_Cost__c</fullName>
        <description>Infowelders</description>
        <formula>Unit_Cost__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit Cost * Quantity</inlineHelpText>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <formula>Product_Custom__r.ProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>POS_Item__c</fullName>
        <description>NPA Rollout: Field created to allow users to see POS Item# from a promotion line item instead of the system generated Promotion line item#</description>
        <formula>HYPERLINK(  &quot;/&quot; &amp; Id, &quot;View&quot;)</formula>
        <label>View Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Bottle__c</fullName>
        <description>Plan Bottles for Agreemnts</description>
        <label>Plan Bottle</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Date__c</fullName>
        <label>Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Payment__c</fullName>
        <label>Plan Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Qty__c</fullName>
        <label>Plan Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Rebate__c</fullName>
        <label>Plan Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Cost__c</fullName>
        <description>NPA Rollout: Stores the planned cost of the product for this promotion</description>
        <label>Planned Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Custom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NPA Rollout: Used to store the related Product. /* API name need to be changed to Product__c after Product remediation*/</description>
        <label>Product Name</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Promotion Material Items</relationshipLabel>
        <relationshipName>Promotion_Material_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>NPA Rollout: Used to fetch the product description</description>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Material Items</relationshipLabel>
        <relationshipName>Promotion_Material_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Cost_w_o_VAT__c</fullName>
        <description>INFOWELDERS</description>
        <formula>Extended_Cost__c /(1+ Product_Custom__r.VAT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Cost w/o VAT (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <description>Infowelders: Used by CRM.
		NPA Rollout: Used to refer to Promotion.</description>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Material Items</relationshipLabel>
        <relationshipName>Promotion_Material_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Infowelders</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Infowelders</description>
        <label>Remarks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>Infowelders</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Time__c</fullName>
        <description>INFOWELDERS</description>
        <label>Request Time</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipped_Amount__c</fullName>
        <description>INFOWELDERS</description>
        <inlineHelpText>Quantity Shipped</inlineHelpText>
        <label>Shipped Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <description>INFOWELDERS</description>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>NPA Rollout: Field to store the status of product for the promotion</description>
        <label>Item Status</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <description>Infowelders</description>
        <inlineHelpText>This field will be set by Workflow</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>NPA Rollout: Used to store the Unit of Measure for the product</description>
        <label>UoM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wet_Good_Use__c</fullName>
        <description>Infowelders-</description>
        <inlineHelpText>Is this wet good being used as a give-away sample or are these &quot;free&quot;, i.e. a discount?</inlineHelpText>
        <label>Wet Good Use</label>
        <picklist>
            <picklistValues>
                <fullName>Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Promotion Material Item</label>
    <nameField>
        <displayFormat>PMI-{YYYY}{00000}</displayFormat>
        <label>Promotion Material Item#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Material Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>